v1.1.1 - Pending
	+ Bug: A 2nd instance isn't prevented with dbus/python 2.4 (Sebastian)
	+ Bug: Incorrect artist can sometimes be set for album art/info (vEX)

v1.1 - May 7, 2007
	+ Ctrl-J for xmms-like search filter (vEX/Eduard)
	+ Implemented logic for Various Artists albums
	+ Cover art pref: save to ~/.covers or file's respective dir
	+ Support for GNOME session management
	+ Allow searching through ALL metadata in library
	+ Link artist and album name in song info window to wikipedia entry
	+ Add shuffle, repeat, --visible, and --hidden commandline arguments
	+ Show if mpd is updating in statusbar
	+ Save last used option in library search
	+ Update code for dbus-python 0.80 API (Jordan)
	+ Ellipsize text in treeviews, current playing song (Jordan)
	+ Add button for listing of shortcuts to About dialog
	+ Resize cover art to fit song info window
	+ Added Simplified Chinese translation (Desmond Chang)
	+ Bug: Prevent tracebacks between withdrawing app & gtk.StatusIcon
	+ Bug: Fix error if mpd is not running and sonata starts hidden
	+ Bug: Can't manually set artwork across filesystems
	+ Bug: Can't use find-as-you-type in the current playlist
	+ Bug: Right-click menu closes right away for some users

v1.0.1 - February 13, 2007
	+ Make lyrics fetching optional
	+ Allow editing of stream name/url
	+ Hide the notification window when it is clicked
	+ Small usability improvements to gtk.StatusIcon
	+ Improvements to reordering the current playlist with drag-n-drop
	+ Bug: Info window freezes when editing currently playing song's tags
	+ Bug: Tag editing doesn't work with older version (0.90.1) of tagpy
	+ Bug: Prevent strange potential freeze with gc.collect()
	+ Bug: Cover art doesn't update correctly if Local Only artwork set
	+ Bug: Lyrics occassionally don't stay synced with current playing song

v1.0 - January 21, 2007
	+ Multiple views for library: filesystem, artists, albums
	+ Editing of song tags (requires optional taglib & tagpy)